# rpg-encoder

./: .editorconfig  .gitignore  .rpgignore  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  server.json  use_cases.md
.claude/: settings.json
.claude/skills/rpg/: SKILL.md
.gemini/extensions/rpg/: CONTEXT.md  gemini-extension.json
.gemini/extensions/rpg/commands/: rpg-build.toml  rpg-lift.toml  rpg-search.toml
.github/workflows/: ci.yml  release.yml
.rpg/: .gitignore  graph.json
benchmarks/: README.md  comparison.md  queries.json  results.json  search_quality.py
crates/rpg-build/: Cargo.toml
crates/rpg-build/src/: design.rs  lib.rs  prompts.rs
crates/rpg-cli/: Cargo.toml
crates/rpg-cli/src/: main.rs
crates/rpg-cli/tests/: cli_integration.rs
crates/rpg-core/: Cargo.toml
crates/rpg-core/benches/: serialization.rs
crates/rpg-core/src/: config.rs  graph.rs  lca.rs  lib.rs  schema.rs  storage.rs
crates/rpg-core/tests/: graph_ops.rs  storage_roundtrip.rs
crates/rpg-encoder/: .gitignore  Cargo.toml
crates/rpg-encoder/src/: critic.rs  dataflow.rs  embeddings.rs  evolution.rs  grounding.rs  hierarchy.rs  lib.rs  lift.rs  reconstruction.rs  semantic_lifting.rs
crates/rpg-encoder/src/llm/: mod.rs  ollama.rs  providers.rs
crates/rpg-encoder/src/prompts/: domain_discovery.md  file_synthesis.md  find_best_parent.md  hierarchy_construction.md  repo_summary.md  semantic_parsing.md  semantic_routing.md
crates/rpg-encoder/tests/: evolution_test.rs  grounding_test.rs  incremental_test.rs  integration_fixture.rs  reconstruction_test.rs  rpgignore_test.rs
crates/rpg-gen/: Cargo.toml
crates/rpg-gen/src/: interfaces.rs  lib.rs  plan.rs  skeleton.rs  spec.rs  tasks.rs  validation.rs
crates/rpg-gen/src/prompts/: interface_design.md  spec_decomposition.md  task_instructions.md  tdd_task_instructions.md  validation_critique.md
crates/rpg-lift/: Cargo.toml
crates/rpg-lift/src/: cost.rs  lib.rs  pipeline.rs  progress.rs  provider.rs
crates/rpg-mcp/: Cargo.toml
crates/rpg-mcp/src/: generation.rs  helpers.rs  hierarchy_helpers.rs  main.rs  params.rs  quality.rs  server.rs  tools.rs  types.rs
crates/rpg-mcp/src/prompts/: server_instructions.md
crates/rpg-mcp/tests/: tool_handlers.rs
crates/rpg-nav/: Cargo.toml
crates/rpg-nav/benches/: search.rs
crates/rpg-nav/src/: context.rs  cycles.rs  dataflow.rs  diff.rs  duplication.rs  embedding_search.rs  embeddings.rs  explore.rs  export.rs  fetch.rs  health.rs  impact.rs  lib.rs  paths.rs  planner.rs  search.rs  slice.rs  snapshot.rs  toon.rs
crates/rpg-nav/tests/: explore.rs  export.rs  fetch.rs  search.rs
crates/rpg-parser/: Cargo.toml  build.rs
crates/rpg-parser/benches/: parsing.rs
crates/rpg-parser/src/: deps.rs  entities.rs  languages.rs  lib.rs  signals.rs  treesitter.rs
crates/rpg-parser/src/languages/defs/: bash.toml  c.toml  cpp.toml  csharp.toml  go.toml  java.toml  javascript.toml  kotlin.toml  php.toml  python.toml  ruby.toml  rust.toml  scala.toml  swift.toml  typescript.toml
crates/rpg-parser/src/paradigms/: classify.rs  defs.rs  features.rs  helpers.rs  mod.rs  query_engine.rs
crates/rpg-parser/src/paradigms/defs/: angular.toml  aspnet.toml  c.toml  compose.toml  core.toml  cpp.toml  csharp.toml  django.toml  express.toml  fastapi.toml  flask.toml  gin.toml  go.toml  java.toml  kotlin.toml  laravel.toml  nestjs.toml  nextjs.toml  php.toml  python.toml  rails.toml  react.toml  redux.toml  ruby.toml  rust.toml  scala.toml  spring.toml  svelte.toml  swift.toml  swiftui.toml  vue.toml
crates/rpg-parser/tests/: bash_deps.rs  bash_entities.rs  c_deps.rs  c_entities.rs  cpp_deps.rs  cpp_entities.rs  csharp_deps.rs  csharp_entities.rs  go_deps.rs  go_entities.rs  java_deps.rs  java_entities.rs  javascript_entities.rs  js_deps.rs  kotlin_deps.rs  kotlin_entities.rs  php_deps.rs  php_entities.rs  python_deps.rs  python_entities.rs  ruby_deps.rs  ruby_entities.rs  rust_deps.rs  rust_entities.rs  scala_deps.rs  scala_entities.rs  swift_deps.rs  swift_entities.rs  typescript_deps.rs  typescript_entities.rs
docs/: comparison.md  paper_fidelity.md  parity_audit.md  validation_playbook.md
npm/: .gitignore  README.md  install.js  package.json
references/: 2602.02084.md
tests/fixtures/nextjs_project/: package.json
tests/fixtures/nextjs_project/app/dashboard/: page.tsx
tests/fixtures/nextjs_project/app/login/: page.tsx
tests/fixtures/nextjs_project/src/components/: LoginForm.tsx  PostList.tsx
tests/fixtures/nextjs_project/src/hooks/: useAuth.ts
tests/fixtures/nextjs_project/src/state/: actions.ts  api.ts  authSlice.ts  selectors.ts  store.ts  thunks.ts
