[package]
name = "rpg-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Code generation planning and orchestration for RPG"

[dependencies]
rpg-core.workspace = true
rpg-parser.workspace = true
rpg-encoder.workspace = true
rpg-nav.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
globset.workspace = true

# Hashing for content verification
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
