[package]
name = "rpg-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server exposing RPG navigation tools"

[[bin]]
name = "rpg-mcp-server"
path = "src/main.rs"

[features]
default = ["embeddings", "auto-lift", "rpg-build"]
embeddings = ["rpg-nav/embeddings"]
auto-lift = ["rpg-lift"]
rpg-build = ["dep:rpg-build", "rpg-lift"]

[dependencies]
rpg-core.workspace = true
rpg-nav = { workspace = true }
rpg-encoder.workspace = true
rpg-parser.workspace = true
rpg-lift = { workspace = true, optional = true }
rpg-build = { workspace = true, optional = true }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
ignore.workspace = true
globset.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
