[package]
name = "rpg-nav"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Search, fetch, explore, and TOON serialization for RPG"

[features]
default = []
embeddings = ["dep:fastembed"]

[dependencies]
rpg-core.workspace = true
anyhow.workspace = true
globset.workspace = true
strsim.workspace = true
toon-format.workspace = true
serde.workspace = true
serde_json.workspace = true
fastembed = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
rpg-parser.workspace = true

[[bench]]
name = "search"
harness = false

[lints]
workspace = true
