[package]
name = "rpg-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tree-sitter based entity and dependency extraction for RPG"

[dependencies]
rpg-core.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-php.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-bash.workspace = true
anyhow.workspace = true
ignore.workspace = true
rayon.workspace = true
toml.workspace = true
regex = "1.12.3"
serde = { workspace = true }

[build-dependencies]
toml = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parsing"
harness = false

[lints]
workspace = true
